pname-cmd のコード整理。