@@ -18,14 +18,11 @@ package cherry.pname.web;
 
 import cherry.pname.dict.DictLoader;
 import cherry.pname.processor.PnameType;
-import cherry.pname.processor.Processor;
 import cherry.pname.processor.ProcessorBuilder;
 import cherry.pname.processor.ResultConsumer;
 import org.apache.commons.csv.CSVFormat;
 import org.apache.commons.csv.CSVParser;
 import org.apache.commons.csv.CSVPrinter;
-import org.springframework.beans.factory.InitializingBean;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.io.IOException;
@@ -33,36 +30,43 @@ import java.io.StringReader;
 import java.io.StringWriter;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
-import java.util.stream.StreamSupport;
 
 @RestController
-public class PnameControllerImpl implements PnameController, InitializingBean {
+public class PnameControllerImpl implements PnameController {
 
-    @Autowired
-    private WebConfig webConfig;
-
-    @Autowired
-    private DictLoader dictLoader;
-
-    @Autowired
-    private ProcessorBuilder processorBuilder;
-
+    private final WebConfig webConfig;
+    private final DictLoader dictLoader;
+    private final ProcessorBuilder processorBuilder;
     private Map<String, List<String>> dictMap;
 
-    @Override
-    public void afterPropertiesSet() throws IOException {
-        dictMap = dictLoader.load(webConfig.getDict(), webConfig.getCharset(), false, webConfig.getDelim(),
-                webConfig.getDict().getFilename().endsWith(".tsv"));
+    public PnameControllerImpl(
+            WebConfig webConfig,
+            DictLoader dictLoader,
+            ProcessorBuilder processorBuilder
+    ) throws IOException {
+        this.webConfig = webConfig;
+        this.dictLoader = dictLoader;
+        this.processorBuilder = processorBuilder;
+        dictMap = dictLoader.load(
+                webConfig.getDict(),
+                webConfig.getCharset(),
+                false,
+                webConfig.getDelim(),
+                webConfig.getDict().getFilename().endsWith(".tsv")
+        );
     }
 
     @Override
     public List<Result> generate(String ln, PnameType type) {
-        Processor processor = processorBuilder.build(dictMap, type);
-        try (StringReader reader = new StringReader(ln); CSVParser parser = CSVParser.parse(reader, CSVFormat.TDF)) {
-            return StreamSupport.stream(parser.spliterator(), false).filter(rec -> rec.size() > 0)
-                    .map(rec -> rec.get(0)).map(processor::process)
-                    .map(pr -> new Result(pr.getLname(), pr.getPname(), pr.getDesc())).collect(Collectors.toList());
+        var processor = processorBuilder.build(dictMap, type);
+        try (var reader = new StringReader(ln);
+             var parser = CSVParser.parse(reader, CSVFormat.TDF)) {
+            return parser.stream()
+                    .filter(rec -> rec.size() > 0)
+                    .map(rec -> rec.get(0))
+                    .map(processor::process)
+                    .map(pr -> new Result(pr.lname(), pr.pname(), pr.desc()))
+                    .toList();
         } catch (IOException ex) {
             throw new IllegalStateException(ex);
         }
@@ -70,16 +74,19 @@ public class PnameControllerImpl implements PnameController, InitializingBean {
 
     @Override
     public String generateTsv(String ln, PnameType type) {
-        Processor processor = processorBuilder.build(dictMap, type);
-        try (StringReader reader = new StringReader(ln);
-             CSVParser parser = CSVParser.parse(reader, CSVFormat.TDF);
-             StringWriter writer = new StringWriter();
-             CSVPrinter printer = new CSVPrinter(writer, CSVFormat.TDF)) {
+        var processor = processorBuilder.build(dictMap, type);
+        try (var reader = new StringReader(ln);
+             var parser = CSVParser.parse(reader, CSVFormat.TDF);
+             var writer = new StringWriter();
+             var printer = new CSVPrinter(writer, CSVFormat.TDF)) {
             ResultConsumer consumer = webConfig.isDesc()
-                    ? pr -> printer.printRecord(pr.getLname(), pr.getPname(), pr.getDesc())
-                    : pr -> printer.printRecord(pr.getLname(), pr.getPname());
-            StreamSupport.stream(parser.spliterator(), false).filter(rec -> rec.size() > 0).map(rec -> rec.get(0))
-                    .map(processor::process).forEach(consumer);
+                    ? pr -> printer.printRecord(pr.lname(), pr.pname(), pr.desc())
+                    : pr -> printer.printRecord(pr.lname(), pr.pname());
+            parser.stream()
+                    .filter(rec -> rec.size() > 0)
+                    .map(rec -> rec.get(0))
+                    .map(processor::process)
+                    .forEach(consumer);
             printer.flush();
             return writer.toString();
         } catch (IOException ex) {
@@ -89,17 +96,26 @@ public class PnameControllerImpl implements PnameController, InitializingBean {
 
     @Override
     public int uploadDictText(String dicttext) throws IOException {
-        try (StringReader reader = new StringReader(dicttext)) {
-            dictMap = dictLoader.load(reader, false, webConfig.getDelim(),
-                    webConfig.getDict().getFilename().endsWith(".tsv"));
+        try (var reader = new StringReader(dicttext)) {
+            dictMap = dictLoader.load(
+                    reader,
+                    false,
+                    webConfig.getDelim(),
+                    webConfig.getDict().getFilename().endsWith(".tsv")
+            );
         }
         return dictMap.size();
     }
 
     @Override
     public int reloadDict() throws IOException {
-        dictMap = dictLoader.load(webConfig.getDict(), webConfig.getCharset(), false, webConfig.getDelim(),
-                webConfig.getDict().getFilename().endsWith(".tsv"));
+        dictMap = dictLoader.load(
+                webConfig.getDict(),
+                webConfig.getCharset(),
+                false,
+                webConfig.getDelim(),
+                webConfig.getDict().getFilename().endsWith(".tsv")
+        );
         return dictMap.size();
     }
 
